@@ -1,4 +1,7 @@
           CHANGES IN SOUNDGEN VERSION 1.6.0.9000 [---date---]
+BUGS FIXED:
+  * soundgen(): stochastic formants were not added to breathing noise unless VTL was specified
+
 
           CHANGES IN SOUNDGEN VERSION 1.6.0 [09-December-2019]
 BUGS FIXED:
